# trc8004-m2m-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agent_to_agent.py  register_agent.py  search_agents.py  validation_workflow.py
trc8004_m2m/: __init__.py  agent_protocol.py  exceptions.py  registry.py
trc8004_m2m/api/: __init__.py  client.py
trc8004_m2m/blockchain/: __init__.py  tron_client.py
trc8004_m2m/models/: __init__.py  agent.py
trc8004_m2m/storage/: __init__.py  ipfs.py
trc8004_m2m/utils/: __init__.py  chain_utils.py  crypto.py  retry.py
